--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
 <!-- Header -->
 <header class="w3-display-container w3-content w3-wide" style="max-width:1500px;" id="home">
-  <img class="w3-image" src="/img/h5.jpeg" alt="Architecture" width="1500" height="800">
+  <img class="w3-image" src="h5.jpeg" alt="Architecture" width="1500" height="800">
   <div class="w3-display-middle w3-margin-top w3-center">
     <h1 class="w3-xxlarge w3-text-white"><span class="w3-padding w3-black w3-opacity-min"><b>RP</b></span> <span class="w3-hide-small w3-text-light-grey">Architects</span></h1>
   </div>
@@ -43,25 +43,25 @@
     <div class="w3-col l3 m6 w3-margin-bottom">
       <div class="w3-display-container">
         <div class="w3-display-topleft w3-black w3-padding">Summer House</div>
-        <img src="/img/h2.jpeg" alt="House" style="width:100%">
+        <img src="h2.jpeg" alt="House" style="width:100%">
       </div>
     </div>
     <div class="w3-col l3 m6 w3-margin-bottom">
       <div class="w3-display-container">
         <div class="w3-display-topleft w3-black w3-padding">Brick House</div>
-        <img src="/img/h3.jpeg" alt="House" style="width:100%">
+        <img src="h3.jpeg" alt="House" style="width:100%">
       </div>
     </div>
     <div class="w3-col l3 m6 w3-margin-bottom">
       <div class="w3-display-container">
         <div class="w3-display-topleft w3-black w3-padding">Renovated</div>
-        <img src="/img/h4.jpeg" alt="House" style="width:100%">
+        <img src="h4.jpeg" alt="House" style="width:100%">
       </div>
     </div>
     <div class="w3-col l3 m6 w3-margin-bottom">
       <div class="w3-display-container">
         <div class="w3-display-topleft w3-black w3-padding">Barn House</div>
-        <img src="/img/h1.jpeg" alt="House" style="width:100%">
+        <img src="h1.jpeg" alt="House" style="width:100%">
       </div>
     </div>
   </div>
@@ -102,28 +102,28 @@
 
   <div class="w3-row-padding w3-grayscale">
     <div class="w3-col l3 m6 w3-margin-bottom">
-      <img src="/img/p1.jpeg" alt="John" style="width:100%">
+      <img src="p1.jpeg" alt="John" style="width:100%">
       <h3>Spiderman</h3>
       <p class="w3-opacity">CEO & Founder</p>
       <p>Phasellus eget enim eu lectus faucibus vestibulum. Suspendisse sodales pellentesque elementum.</p>
       <p><button class="w3-button w3-light-grey w3-block">Contact</button></p>
     </div>
     <div class="w3-col l3 m6 w3-margin-bottom">
-      <img src="/img/p2.jpeg" alt="Jane" style="width:100%">
+      <img src="p2.jpeg" alt="Jane" style="width:100%">
       <h3>Black Cat</h3>
       <p class="w3-opacity">Architect</p>
       <p>Phasellus eget enim eu lectus faucibus vestibulum. Suspendisse sodales pellentesque elementum.</p>
       <p><button class="w3-button w3-light-grey w3-block">Contact</button></p>
     </div>
     <div class="w3-col l3 m6 w3-margin-bottom">
-      <img src="/img/p3.jpeg" alt="Mike" style="width:100%">
+      <img src="p3.jpeg" alt="Mike" style="width:100%">
       <h3>Ross Geller</h3>
       <p class="w3-opacity">Architect</p>
       <p>Phasellus eget enim eu lectus faucibus vestibulum. Suspendisse sodales pellentesque elementum.</p>
       <p><button class="w3-button w3-light-grey w3-block">Contact</button></p>
     </div>
     <div class="w3-col l3 m6 w3-margin-bottom">
-      <img src="/img/p4.jpeg" alt="Dan" style="width:100%">
+      <img src="p4.jpeg" alt="Dan" style="width:100%">
       <h3>Ginger Star</h3>
       <p class="w3-opacity">Architect</p>
       <p>Phasellus eget enim eu lectus faucibus vestibulum. Suspendisse sodales pellentesque elementum.</p>
@@ -148,7 +148,8 @@
   
 <!-- Image of location/map -->
 <div class="w3-container">
-  <img src="/img/map.jpeg" class="w3-image" style="width:100%">
+  <img src="/map.jpeg" class="w3-image" style="width:100%">
+  <!-- ABAB -->
 </div>
 
 <!-- End page content -->
